# log.c

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: log.c  log.h
test/: main.c
